5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1692_1101.log
== TEST (2019-05-02 10:53:54) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ")
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
	consumo= c*0.44
	print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- ERROR:
File "XXXX", line 7
    consumo= c*0.44
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:55:26) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ")
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
	consumo= c*0.44
	print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.178776
-- ERROR:
  File "/home/codebench/codes/1692/1101/main.py", line 7
    consumo= c*0.44
          ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:58:52) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ")
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
	consumo= c*0.44
	print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- ERROR:
File "XXXX", line 7
    consumo= c*0.44
          ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 10:59:32) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ")
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
		consumo= c*0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.164455
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:59:34) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ")
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
		consumo= c*0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 10:59:55) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ")
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
		consumo= c*0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:01:20) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ").upper()
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
		consumo= c*0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.180468
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:01:24) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ").upper()
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
		consumo= c*0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:01:42) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ").upper()
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500,0):
		consumo= c*0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c*0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:02:56) 
-- CODE:
c = float(input("Digite o consumo de energia: "))
t = input("Digite o tipo de instalação: ").upper()
print("Entradas:", c, "kwh", "e", "tipo",t)

if(t=="R" and c>=0):
	if(c<=500.0):
		consumo= c *0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c *0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.154837
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:56:42) 
-- CODE:
c = float(input("Digite o consumo: "))
t = input("Digite o tipo de instalação: ").upper()
print("Entradas:",c , "kwh", "e", "tipo", t)

if(t=="R" and c >=0):
	if(c <=500.0):
		consumo= c *0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c *0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.21955
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:56:46) 
-- CODE:
c = float(input("Digite o consumo: "))
t = input("Digite o tipo de instalação: ").upper()
print("Entradas:",c , "kwh", "e", "tipo", t)

if(t=="R" and c >=0):
	if(c <=500.0):
		consumo= c *0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c *0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:57:20) 
-- CODE:
c = float(input("Digite o consumo: "))
t = input("Digite a instalacao: ").upper()
print("Entradas:",c , "kwh", "e", "tipo", t)

if(t=="R" and c >=0):
	if(c <=500.0):
		consumo= c *0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c *0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.213981
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 15:57:23) 
-- CODE:
c = float(input("Digite o consumo: "))
t = input("Digite a instalacao: ").upper()
print("Entradas:",c , "kwh", "e", "tipo", t)

if(t=="R" and c >=0):
	if(c <=500.0):
		consumo= c *0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c *0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- OUTPUT:
Entradas: -56.0 kwh e tipo I
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 15:57:58) 
-- CODE:
c = float(input("Digite o consumo: "))
t = input("Digite a instalacao: ").upper()
print("Entradas:",c , "kwh", "e", "tipo", t)

if(t=="R" and c >=0):
	if(c <=500.0):
		consumo= c *0.44
		print("Valor total: R$", round(consumo, 2))
	else:
		consumo= c *0.65
		print("valor total: R$", round(consumo, 2))
elif(t=="I" and c>=0):
	if(c<=5000):
		consumo= c*0.55
		print("valor tota: R$", round(consumo, 2))
	else:
		consumo = c*0.60
		print("valor total: R$", round(consumo, 2))
elif(t=="C" and c>=0):
	if(c<=1000):
		consumo= c*0.55
		print("valor total: R$", round(consumo, 2))
	else:
		print("Dados invalidos")
	
-- EXECUTION TIME:
0.136725
-- TEST CASE 1:
---- input:
-56
I
---- correct output:
Entradas: -56.0 kWh e tipo I
Dados invalidos
---- user output:
Entradas: -56.0 kwh e tipo I
-- TEST CASE 2:
---- input:
955.5
R
---- correct output:
Entradas: 955.5 kWh e tipo R
Valor total: R$ 621.08
---- user output:
Entradas: 955.5 kwh e tipo R
valor total: R$ 621.08
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
